# bio-conservation

./: .gitignore
climate/: gbif_functions.R  test.R
climate/scratchpad/: bq_upload.R  gbif_pipeline.R  gbif_query.R  visuals.R  visuals_html.Rmd
gbif/: README.md  pyproject.toml  test.tif
gbif/gbif/: climate.py  climate_lib_test.ipynb  covariates.py  human_interference.py  land_cover.py  quick_test.ipynb  soil_data.py  species.py  utils.py
gbif/tests/: test_gbif.py
