[tool.poetry]
name = "gbif"
version = "0.1.0"
description = "Landing Station for all your GBIF co-variates"
authors = ["tekritesh <ritesh.tekriwal03@gmail.com>"]

license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
noaa-sdk = "^0.1.21"
pandas = "^1.4.3"
meteostat = "^1.6.3"
DateTime = "^4.5"
logger = "^1.4"
earthengine-api = "^0.1.317"
mkdocs = "^1.3.0"
pygbif = "^0.6.1"
streamlit = "^1.11.0"
google-cloud = "^0.34.0"
leafmap = "^0.10.3"
google-cloud-bigquery = "^3.2.0"
scipy = "^1.8.1"
geemap = "^0.15.5"
streamlit-folium = "^0.6.14"
geopandas = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
